# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

module(
    name = "typedb_dependencies",
    version = "0.0.0",
    compatibility_level = 1,
)

# ===========================================================
# Common
# ===========================================================

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "bazel_features", version = "1.21.0")

# ===========================================================
# Build dependencies
# ===========================================================

bazel_dep(name = "toolchains_llvm", version = "1.3.0", dev_dependency = True)
llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True
)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "18.1.8",
    cxx_flags = {
        "macos": ["-mmacosx-version-min=10.13"],
    },
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_arm64//:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain")

http_archive(
    name = "org_chromium_sysroot_linux_arm64",
    build_file_content = """
filegroup(
    name = "sysroot",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "2e3a344f48da76b6532f3de86759f94359292143ccaf6094814e09441a36629f",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/0e28d9832614729bb5b731161ff96cb4d516f345/debian_bullseye_arm64_sysroot.tar.xz"],
)

register_toolchains("@llvm_toolchain//:all", dev_dependency = True)

# ===========================================================
# Languages & toolchains
# ===========================================================

# Rust
bazel_dep(name = "rules_rust", version = "0.56.0")
# Backport a bug fix from rules_rust 0.58 (bazelbuild/rules_rust#3251)
git_override(
    module_name = "rules_rust",
    remote = "https://github.com/bazelbuild/rules_rust",
    tag = "0.56.0",
    patches = ["//patches:rules_rust.patch"],
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
    extra_target_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(version = "1.93.0")

# Kotlin
bazel_dep(name = "rules_kotlin", version = "2.0.0", repo_name = "io_bazel_rules_kotlin")
register_toolchains("@io_bazel_rules_kotlin//kotlin/internal:default_toolchain")

# Python
bazel_dep(name = "rules_python", version = "1.0.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(is_default = True, python_version = "3.11")

# Java
bazel_dep(name = "rules_java", version = "8.6.2")

# C/C++
bazel_dep(name = "rules_cc", version = "0.0.17")

# ===========================================================
# Code generation
# ===========================================================

# Protobuf / gRPC
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")

# CxxBridge
http_file(
    name = "cxxbridge_linux",
    urls = ["https://repo.typedb.com/public/public-tools/raw/versions/1.0.55/cxxbridge-v1.0.55-linux"],
    executable = True,
)
http_file(
    name = "cxxbridge_mac",
    urls = ["https://repo.typedb.com/public/public-tools/raw/versions/1.0.55/cxxbridge-v1.0.55-mac"],
    executable = True,
)
http_file(
    name = "cxxbridge_windows",
    urls = ["https://repo.typedb.com/public/public-tools/raw/versions/1.0.55/cxxbridge-v1.0.55-windows.exe"],
    executable = True,
)

# SWIG
http_archive(
    name = "swig",
    urls = ["http://prdownloads.sourceforge.net/swig/swig-4.1.1.tar.gz"],
    strip_prefix = "swig-4.1.1",
    sha256 = "2af08aced8fcd65cdb5cc62426768914bedc735b1c250325203716f78e39ac9b",
    build_file = "//tool/swig:swig.BUILD",
)

# ===========================================================
# Package managers
# ===========================================================

# Pip
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "typedb_dependencies_ci_pip",
    python_version = "3.11",
    requirements_lock = "//:tool/requirements.txt",
)
use_repo(pip, "typedb_dependencies_ci_pip")

# Maven
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.3.0")
maven = use_extension("//library/maven:maven_extension.bzl", "maven")
use_repo(maven, "maven")

# Rust crates
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:library/crates/Cargo.lock",
    manifests = ["//:library/crates/Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-msvc",
        "x86_64-unknown-linux-gnu",
    ],
)
crate.annotation(
    crate = "cbindgen",
    gen_binaries = ["cbindgen"],
)
crate.annotation(
    crate = "librocksdb-sys",
    rustc_flags = ["-C", "opt-level=3"],
)
crate.annotation(
    crate = "protobuf-build",
    patches = ["//patches:protobuf-build-include.patch", "//patches:protobuf-build-protoc.patch"],
    data_glob = ["include/**"],
)
crate.annotation(
    crate = "raft-proto",
    build_script_data = [
        "@crates__protobuf-build-0.14.1//:protobuf_build",
        "@@protobuf+//:protoc",
    ],
    build_script_env = {
        "PROTOBUF_BUILD_INCLUDE": "external/rules_rust++crate+crates__protobuf-build-0.14.1/include",
        "PROTOC": "$(execpath @@protobuf+//:protoc)",
    },
)
use_repo(crate, "crates")

# ===========================================================
# Native libraries
# ===========================================================

# Google OR-Tools
http_archive(
    name = "or_tools_linux",
    urls = ["https://github.com/google/or-tools/releases/download/v9.0/or-tools_debian-10_v9.0.9048.tar.gz"],
    strip_prefix = "or-tools_Debian-10-64bit_v9.0.9048/",
    sha256 = "063fb1d8765ae23b0bb25b9c561e904532713416fe0458f7db45a0f72190eb50",
    build_file = "//library/ortools:ortools_linux.BUILD",
)

http_archive(
    name = "or_tools_mac",
    urls = ["https://github.com/google/or-tools/releases/download/v9.0/or-tools_MacOsX-11.2.3_v9.0.9048.tar.gz"],
    strip_prefix = "or-tools_MacOsX-11.2.3_v9.0.9048/",
    sha256 = "adf73a00d4ec49558b67be5ce3cfc8f30268da2253b35feb11d0d40700550bf6",
    build_file = "//library/ortools:ortools_mac.BUILD",
)

http_archive(
    name = "or_tools_windows",
    urls = ["https://github.com/google/or-tools/releases/download/v9.0/or-tools_VisualStudio2019-64bit_v9.0.9048.zip"],
    strip_prefix = "or-tools_VisualStudio2019-64bit_v9.0.9048/",
    sha256 = "1be7286e082ba346f8729a873c5fd85418ac2dc95b847d9baa5381c5ac5f5fd9",
    build_file = "//library/ortools:ortools_windows.BUILD",
)

# ===========================================================
# Code quality
# ===========================================================

# SonarCloud
http_file(
    name = "sonarscanner_any_zip",
    urls = ["https://repo1.maven.org/maven2/org/sonarsource/scanner/cli/sonar-scanner-cli/5.0.1.3006/sonar-scanner-cli-5.0.1.3006.zip"],
)
http_file(
    name = "sonarscanner_mac_zip",
    urls = ["https://repo1.maven.org/maven2/org/sonarsource/scanner/cli/sonar-scanner-cli/5.0.1.3006/sonar-scanner-cli-5.0.1.3006-macosx.zip"],
)
http_file(
    name = "sonarscanner_linux_zip",
    urls = ["https://repo1.maven.org/maven2/org/sonarsource/scanner/cli/sonar-scanner-cli/5.0.1.3006/sonar-scanner-cli-5.0.1.3006-linux.zip"],
)

# Checkstyle
http_file(
    name = "antlr_antlr",
    urls = ["https://repo1.maven.org/maven2/antlr/antlr/2.7.7/antlr-2.7.7.jar"],
    sha256 = "88fbda4b912596b9f56e8e12e580cc954bacfb51776ecfddd3e18fc1cf56dc4c",
    downloaded_file_path = "antlr.jar",
)
http_file(
    name = "org_antlr_antlr4_runtime",
    urls = ["https://repo1.maven.org/maven2/org/antlr/antlr4-runtime/4.5.1-1/antlr4-runtime-4.5.1-1.jar"],
    sha256 = "ffca72bc2a25bb2b0c80a58cee60530a78be17da739bb6c91a8c2e3584ca099e",
    downloaded_file_path = "antlr4-runtime.jar",
)
http_file(
    name = "com_puppycrawl_tools_checkstyle",
    urls = ["https://repo1.maven.org/maven2/com/puppycrawl/tools/checkstyle/8.15/checkstyle-8.15.jar"],
    sha256 = "ac3602c4d50c3113b14614a6ac38ec03c63d9839e4316e057c4bb66d97183087",
    downloaded_file_path = "checkstyle.jar",
)
http_file(
    name = "commons_beanutils_commons_beanutils",
    urls = ["https://repo1.maven.org/maven2/commons-beanutils/commons-beanutils/1.9.3/commons-beanutils-1.9.3.jar"],
    sha256 = "c058e39c7c64203d3a448f3adb588cb03d6378ed808485618f26e137f29dae73",
    downloaded_file_path = "commons-beanutils.jar",
)
http_file(
    name = "info_picocli_picocli",
    urls = ["https://repo1.maven.org/maven2/info/picocli/picocli/3.8.2/picocli-3.8.2.jar"],
    sha256 = "b16786a3817530151ccc44ac44f1f803b9a1b4069e98c4d1ed2fc0ece12d6de7",
    downloaded_file_path = "picocli.jar",
)
http_file(
    name = "commons_collections_commons_collections",
    urls = ["https://repo1.maven.org/maven2/commons-collections/commons-collections/3.2.2/commons-collections-3.2.2.jar"],
    sha256 = "eeeae917917144a68a741d4c0dff66aa5c5c5fd85593ff217bced3fc8ca783b8",
    downloaded_file_path = "commons-collections.jar",
)
http_file(
    name = "com_google_guava_guava30jre",
    urls = ["https://repo1.maven.org/maven2/com/google/guava/guava/30.1-jre/guava-30.1-jre.jar"],
    sha256 = "e6dd072f9d3fe02a4600688380bd422bdac184caf6fe2418cfdd0934f09432aa",
    downloaded_file_path = "guava.jar",
)
http_file(
    name = "org_slf4j_slf4j_api",
    urls = ["https://repo1.maven.org/maven2/org/slf4j/slf4j-api/1.7.7/slf4j-api-1.7.7.jar"],
    sha256 = "69980c038ca1b131926561591617d9c25fabfc7b29828af91597ca8570cf35fe",
    downloaded_file_path = "slf4j-api.jar",
)
http_file(
    name = "org_slf4j_slf4j_jcl",
    urls = ["https://repo1.maven.org/maven2/org/slf4j/jcl-over-slf4j/1.7.7/jcl-over-slf4j-1.7.7.jar"],
    sha256 = "c6472b5950e1c23202e567c6334e4832d1db46fad604b7a0d7af71d4a014bce2",
    downloaded_file_path = "jcl-over-slf4j.jar",
)

# Buildozer & unused_deps
http_file(
    name = "buildozer_linux",
    urls = ["https://repo.typedb.com/public/public-tools/raw/files/buildozer-linux-7e793330b31d465f6bffe101ace2ab25d75e2eec"],
    executable = True,
)
http_file(
    name = "buildozer_mac",
    urls = ["https://repo.typedb.com/public/public-tools/raw/files/buildozer-mac-7e793330b31d465f6bffe101ace2ab25d75e2eec"],
    executable = True,
)
http_file(
    name = "unused_deps_linux",
    urls = ["https://repo.typedb.com/public/public-tools/raw/files/unused_deps-linux-7e793330b31d465f6bffe101ace2ab25d75e2eec"],
    executable = True,
)
http_file(
    name = "unused_deps_mac",
    urls = ["https://repo.typedb.com/public/public-tools/raw/files/unused_deps-mac-7e793330b31d465f6bffe101ace2ab25d75e2eec"],
    executable = True,
)

# ===========================================================
# Packaging & distribution
# ===========================================================

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "typedb_bazel_distribution", version = "0.0.0")
git_override(
    module_name = "typedb_bazel_distribution",
    remote = "https://github.com/typedb/bazel-distribution",
    commit = "6c81a5180ed94a11c989e06a4ff8215df6da163e",
)

# ===========================================================
# Workspace compatibility
# ===========================================================

workspace_refs_stub = use_repo_rule("//tool:workspace_refs_stub.bzl", "workspace_refs_stub")
workspace_refs_stub(name = "typedb_dependencies_workspace_refs")
