# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

maven = use_extension("//library/maven:maven_extension.bzl", "maven")
maven.namespace(name = "typedb_dependencies_maven", artifacts = [
    "com.electronwill.night-config:core",        # //builder/rust/cargo:manifest-writer
    "com.electronwill.night-config:toml",        # //builder/rust/cargo:manifest-writer
    "info.picocli:picocli",                      # //builder/rust/cargo:manifest-writer, //builder/antlr:grammar-adapter
    "org.jetbrains.compose.compiler:compiler",   # //builder/compose:compiler_plugin
    "org.zeroturnaround:zt-exec",                # //builder/rust/cargo:manifest-writer
])
