# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

maven = use_extension("//library/maven:maven_extension.bzl", "maven")
maven.namespace(name = "typedb_maven", artifacts = [
    "org.yaml:snakeyaml",  # //common/java:typedb-common
])
