# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

maven = use_extension("//library/maven:maven_extension.bzl", "maven")
maven.namespace(name = "typedb_dependencies_maven", artifacts = [
    "com.eclipsesource.minimal-json:minimal-json",  # //factory/analysis:dependency-analysis
    "org.zeroturnaround:zt-exec",                   # //factory/analysis:dependency-analysis
])
